src/test/resources/dev/meanmail/inspections/directive/fileContextMismatch.nginx
listen 80;
server_name example.com;

<error descr="Directive 'worker_connections' cannot be used in this context. Current file context is 'server (ngx_http_core_module), server (ngx_mail_core_module)' (determined by the context of existing directives), but 'worker_connections' block can only be defined in: events.">worker_connections</error> 1024;
